text-truncate class, table layout fixed

--- a/client/src/css/Container.css
+++ b/client/src/css/Container.css
@@ -6,3 +6,7 @@
 .entry_container {
   overflow: auto;
 }
+
+table {
+  table-layout: fixed;
+}
